--- a/.github/workflows/tag.yaml
+++ b/.github/workflows/tag.yaml
@@ -27,6 +27,7 @@ jobs:
           draft: false
           prerelease: false
       - name: Upload Release Asset
+        if: always()
         id: upload-release-asset 
         uses: actions/upload-release-asset@v1.0.1
         env:
