--- a/.github/workflows/tag.yaml
+++ b/.github/workflows/tag.yaml
@@ -1,20 +1,20 @@
-name: 'Build tag'
+name: "Build tag"
 on:
   push:
     # Sequence of patterns matched against refs/tags
     tags:
-      - 'v*'
+      - "v*"
 jobs:
   build:
-    name: 'Build and release'
+    name: "Build and release"
     runs-on: ubuntu-latest
     steps:
-      - name: 'Checkout'
+      - name: "Checkout"
         uses: actions/checkout@master
       - uses: actions/setup-go@v1
         with:
-          go-version: '1.13'
-      - name: 'Build git-semver'
+          go-version: "1.21"
+      - name: "Build git-semver"
         run: go build -o git-semver ./cmd/git-semver
       - name: Create Release
         id: create_release
@@ -28,7 +28,7 @@ jobs:
           prerelease: false
       - name: Upload Release Asset
         if: always()
-        id: upload-release-asset 
+        id: upload-release-asset
         uses: actions/upload-release-asset@v1.0.1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -37,3 +37,4 @@ jobs:
           asset_path: ./git-semver
           asset_name: git-semver
           asset_content_type: application/octet-stream
+
